--- a/i18n/zh_CN/LC_MESSAGES/nbjs.po
+++ b/i18n/zh_CN/LC_MESSAGES/nbjs.po
@@ -422,7 +422,7 @@ msgstr "切换选中单元格滚动方式"
 
 #: notebook/static/notebook/js/actions.js:454
 msgid "clear cell output"
-msgstr "清空所有单元格输出"
+msgstr "清空单元格输出"
 
 #: notebook/static/notebook/js/actions.js:455
 msgid "clear output of selected cells"
@@ -863,7 +863,7 @@ msgstr "重新加载"
 
 #: notebook/static/notebook/js/notebook.js:486
 msgid "Overwrite"
-msgstr "重写"
+msgstr "覆盖"
 
 #: notebook/static/notebook/js/notebook.js:487
 msgid "Trust"
@@ -1387,7 +1387,7 @@ msgstr "撤销选择"
 
 #: notebook/static/notebook/js/quickhelp.js:77
 msgid "toggle overwrite flag"
-msgstr "切换 重写标志"
+msgstr "切换 覆盖标志"
 
 #: notebook/static/notebook/js/quickhelp.js:111
 #: notebook/static/notebook/js/quickhelp.js:252
