--- a/i18n/zh_CN/LC_MESSAGES/nbjs.json
+++ b/i18n/zh_CN/LC_MESSAGES/nbjs.json
@@ -1080,7 +1080,7 @@
             "在选中的单元格中替换"
          ],
          "Match case": [
-            "匹配"
+            "匹配大小写"
          ],
          "Find": [
             "查找"
@@ -1092,7 +1092,7 @@
             "无匹配项, 正则表达式无效或为空"
          ],
          "Replace All": [
-            "替换所有"
+            "全部替换"
          ],
          "Find and Replace": [
             "查找并替换"
